<resources>
    <string name="app_name">Ad Alerts</string>
    <string name="action_settings">Settings</string>
    <string name="createNewAlert">Press the \"+\" button to create a new alert.</string>
    <string name="alertOptions">Tap an alert to see existing listings.\n\nTouch and hold an alert for options.</string>
    <string name="noFavourites">You currently have no favourites.</string>
    <string name="noNewListings">You currently have no new listings.</string>
    <string name="endResults">End of results.</string>
    <string name="dataFetchError">DATA FETCH ERROR.\n\ncheck back later</string>
    <string name="title_activity_alert_options">Alert Options</string>

    <string name="title_activity_listings">ListingsActivity</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="title_activity_fullscreen"> </string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="title_activity_favourites">Favourites</string>
    <string name="title_activity_new_listings">All New Listings</string>
    <string name="title_activity_options">Options</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_faq">Frequently Asked Questions</string>
    <string name="title_activity_facebook">Facebook Log In</string>
    <string name="title_activity_settings">Settings</string>

    <string-array name="priceOptions">
        <item>Any</item>
        <item>Specific Price</item>
        <item>Free</item>
    </string-array>

    <string-array name="eLocations">
        <item>Canada Only</item>
        <item>North America</item>
        <item>Specific Location</item>
    </string-array>

    <string-array name="eListingTypes">
        <item>All Listings</item>
        <item>Auction</item>
        <item>Buy It Now</item>
    </string-array>

    <string-array name="kListingTypes">
        <item>All Listings</item>
        <item>Offering</item>
        <item>Wanted</item>
    </string-array>

    <string name="settings_data_fetch">settings_data_fetch</string>
    <string name="settings_notification_timing">settings_notification_timing</string>
    <string name="settings_notification_action">settings_notification_action</string>
    <string name="settings_facebook_label">settings_facebook_label</string>
    <string name="settings_facebook_button">settings_facebook_button</string>
    <string name="settings_importexport_label">settings_importexport_label</string>
    <string name="settings_alertconfig_button">settings_alertconfig_button</string>
    <string name="settings_favourites_button">settings_favourites_button</string>
    <string name="settings_wifi_preference">settings_wifi_preference</string>
    <string name="settings_mobile_preference">settings_mobile_preference</string>
    <string name="settings_dnd_preference">settings_dnd_preference</string>
    <string name="settings_charging_preference">settings_charging_preference</string>
    <string name="settings_battery_preference">settings_battery_preference</string>

    <string name="include_all_text">must include ALL keyword(s)</string>
    <string name="include_all_hint">e.g: \"red, large, cotton\"</string>
    <string name="include_any_text">must include ANY keyword(s)</string>
    <string name="include_any_hint">e.g: \"nike, adidas, puma\"</string>
    <string name="exclude_text">must exclude keyword(s)</string>
    <string name="exclude_hint">e.g: \"sky blue, nylon, vans\"</string>

    <string name="listing_gone">This listing is no longer available.</string>
    <string name="facebook_logged_out">You aren\'t logged in to Facebook.</string>

    <string name="version_name">v%1$s</string>
</resources>
